--- a/PayPay/PayPay/Modules/Home/Views/Home.storyboard
+++ b/PayPay/PayPay/Modules/Home/Views/Home.storyboard
@@ -17,30 +17,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="4fV-ir-VwJ">
-                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <rect key="frame" x="0.0" y="103" width="393" height="749"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7cu-uU-I8h">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="357.66666666666669"/>
-                                        <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qG0-Cf-h5g">
-                                                <rect key="frame" x="50" y="120" width="243" height="80"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="80" id="App-cK-Gic"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
-                                        </subviews>
-                                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
-                                        <constraints>
-                                            <constraint firstItem="qG0-Cf-h5g" firstAttribute="leading" secondItem="7cu-uU-I8h" secondAttribute="leading" constant="50" id="ATe-8E-DHF"/>
-                                            <constraint firstAttribute="trailing" secondItem="qG0-Cf-h5g" secondAttribute="trailing" constant="100" id="Zrs-eg-XbM"/>
-                                            <constraint firstItem="qG0-Cf-h5g" firstAttribute="top" secondItem="7cu-uU-I8h" secondAttribute="top" constant="120" id="hmI-hS-JpD"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="374.66666666666669"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Ch-My-j5R">
-                                        <rect key="frame" x="0.0" y="357.66666666666674" width="393" height="357.33333333333326"/>
-                                        <color key="backgroundColor" systemColor="systemBrownColor"/>
+                                        <rect key="frame" x="0.0" y="374.66666666666674" width="393" height="374.33333333333326"/>
                                     </view>
                                 </subviews>
                                 <constraints>
@@ -49,7 +32,7 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wnO-zt-QYh">
-                                <rect key="frame" x="313" y="435.66666666666669" width="50" height="50"/>
+                                <rect key="frame" x="313" y="452.66666666666669" width="50" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="wnO-zt-QYh" secondAttribute="height" multiplier="1:1" id="imD-uU-Iel"/>
@@ -68,7 +51,7 @@
                         <constraints>
                             <constraint firstItem="wnO-zt-QYh" firstAttribute="bottom" secondItem="7cu-uU-I8h" secondAttribute="bottom" constant="25" id="3Ml-yy-Z5q"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="4fV-ir-VwJ" secondAttribute="trailing" id="FQP-vG-WLj"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="4fV-ir-VwJ" secondAttribute="bottom" id="GFD-hb-lTg"/>
+                            <constraint firstAttribute="bottom" secondItem="4fV-ir-VwJ" secondAttribute="bottom" id="GFD-hb-lTg"/>
                             <constraint firstItem="4fV-ir-VwJ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Ivl-ma-Uxf"/>
                             <constraint firstItem="4fV-ir-VwJ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="XX5-ah-XZm"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="wnO-zt-QYh" secondAttribute="trailing" constant="30" id="aHv-LQ-L9W"/>
@@ -76,7 +59,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="vhY-P0-CyM"/>
                     <connections>
+                        <outlet property="bottomView" destination="6Ch-My-j5R" id="4rA-tf-Nm6"/>
                         <outlet property="swapButton" destination="wnO-zt-QYh" id="zby-Pw-Txi"/>
+                        <outlet property="topView" destination="7cu-uU-I8h" id="8XZ-ia-kid"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -106,12 +91,6 @@
         <image name="arrow.up.arrow.down" catalog="system" width="128" height="97"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="viewFlipsideBackgroundColor">
             <color red="0.12156862745098039" green="0.12941176470588237" blue="0.14117647058823529" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
