--- a/PayPay/PayPay/Modules/Home/Views/Home.storyboard
+++ b/PayPay/PayPay/Modules/Home/Views/Home.storyboard
@@ -35,18 +35,31 @@
                                                     <action selector="topTextFieldEditingChanged:" destination="Y6W-OH-hqX" eventType="editingChanged" id="EK2-Nn-Zdu"/>
                                                 </connections>
                                             </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bdw-Lf-Spd" customClass="AutoAddPaddingButtton" customModule="PayPay" customModuleProvider="target">
+                                                <rect key="frame" x="40" y="250" width="53.666666666666657" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="40" id="ls1-4b-yyE"/>
+                                                </constraints>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="USD" image="arrowtriangle.down.fill" catalog="system">
+                                                    <color key="titleColor" red="0.0" green="0.45882352939999999" blue="0.89019607840000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                            </button>
                                         </subviews>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="rQf-ba-abo" secondAttribute="trailing" constant="40" id="NES-t9-k2z"/>
+                                            <constraint firstItem="bdw-Lf-Spd" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="rQf-ba-abo" secondAttribute="trailing" id="Qnp-6I-L6K"/>
                                             <constraint firstItem="rQf-ba-abo" firstAttribute="leading" secondItem="7cu-uU-I8h" secondAttribute="leading" constant="40" id="c5A-wZ-bUd"/>
                                             <constraint firstItem="rQf-ba-abo" firstAttribute="top" secondItem="7cu-uU-I8h" secondAttribute="top" constant="140" id="m3d-gi-hKg"/>
+                                            <constraint firstItem="bdw-Lf-Spd" firstAttribute="leading" secondItem="rQf-ba-abo" secondAttribute="leading" id="plg-So-AdM"/>
+                                            <constraint firstItem="bdw-Lf-Spd" firstAttribute="top" secondItem="rQf-ba-abo" secondAttribute="bottom" constant="10" id="t1G-lK-hGM"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Ch-My-j5R">
                                         <rect key="frame" x="0.0" y="374.66666666666674" width="393" height="374.33333333333326"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bad-WR-S4l">
-                                                <rect key="frame" x="40" y="174.33333333333331" width="313" height="100"/>
+                                                <rect key="frame" x="40" y="134.33333333333331" width="313" height="100"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="65O-UZ-NJ9"/>
@@ -58,11 +71,24 @@
                                                     <action selector="BottomTextFieldEditingChanged:" destination="Y6W-OH-hqX" eventType="editingDidEnd" id="Y4M-3d-QJv"/>
                                                 </connections>
                                             </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LSY-6L-jcT" customClass="AutoAddPaddingButtton" customModule="PayPay" customModuleProvider="target">
+                                                <rect key="frame" x="40" y="244.33333333333331" width="45.666666666666657" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="40" id="jga-Qj-uCg"/>
+                                                </constraints>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="INR" image="arrowtriangle.down.fill" catalog="system">
+                                                    <color key="titleColor" red="0.0" green="0.45882352939999999" blue="0.89019607840000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                            </button>
                                         </subviews>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="Bad-WR-S4l" secondAttribute="trailing" constant="40" id="G1M-FE-VIq"/>
-                                            <constraint firstAttribute="bottom" secondItem="Bad-WR-S4l" secondAttribute="bottom" constant="100" id="H9A-F9-ldq"/>
+                                            <constraint firstAttribute="bottom" secondItem="Bad-WR-S4l" secondAttribute="bottom" constant="140" id="H9A-F9-ldq"/>
+                                            <constraint firstItem="LSY-6L-jcT" firstAttribute="leading" secondItem="Bad-WR-S4l" secondAttribute="leading" id="Ngl-lp-qXp"/>
                                             <constraint firstItem="Bad-WR-S4l" firstAttribute="leading" secondItem="6Ch-My-j5R" secondAttribute="leading" constant="40" id="Nq3-Td-YPB"/>
+                                            <constraint firstItem="LSY-6L-jcT" firstAttribute="top" secondItem="Bad-WR-S4l" secondAttribute="bottom" constant="10" id="OXy-EK-ooA"/>
+                                            <constraint firstItem="LSY-6L-jcT" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="Bad-WR-S4l" secondAttribute="trailing" id="XTi-2r-B5r"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -99,9 +125,11 @@
                     </view>
                     <navigationItem key="navigationItem" id="vhY-P0-CyM"/>
                     <connections>
+                        <outlet property="bottomMenuButton" destination="LSY-6L-jcT" id="2Ng-u5-gYL"/>
                         <outlet property="bottomTextField" destination="Bad-WR-S4l" id="bdf-kc-R3Z"/>
                         <outlet property="bottomView" destination="6Ch-My-j5R" id="4rA-tf-Nm6"/>
                         <outlet property="swapButton" destination="wnO-zt-QYh" id="zby-Pw-Txi"/>
+                        <outlet property="topMenuButton" destination="bdw-Lf-Spd" id="IEy-ZF-cl3"/>
                         <outlet property="topTextField" destination="rQf-ba-abo" id="dlr-mT-e4u"/>
                         <outlet property="topView" destination="7cu-uU-I8h" id="8XZ-ia-kid"/>
                     </connections>
@@ -131,6 +159,7 @@
     </scenes>
     <resources>
         <image name="arrow.up.arrow.down" catalog="system" width="128" height="97"/>
+        <image name="arrowtriangle.down.fill" catalog="system" width="128" height="120"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
