--- a/PayPay/PayPay/Modules/Home/Views/Home.storyboard
+++ b/PayPay/PayPay/Modules/Home/Views/Home.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -22,7 +23,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7cu-uU-I8h">
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="374.66666666666669"/>
                                         <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rQf-ba-abo">
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rQf-ba-abo">
                                                 <rect key="frame" x="40" y="140" width="313" height="100"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
@@ -58,37 +59,37 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Ch-My-j5R">
                                         <rect key="frame" x="0.0" y="374.66666666666674" width="393" height="374.33333333333326"/>
                                         <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bad-WR-S4l">
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="193-79-SFu">
                                                 <rect key="frame" x="40" y="134.33333333333331" width="313" height="100"/>
                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="100" id="65O-UZ-NJ9"/>
+                                                    <constraint firstAttribute="height" constant="100" id="PEc-sR-ZMh"/>
                                                 </constraints>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                                 <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
                                                 <connections>
-                                                    <action selector="BottomTextFieldEditingChanged:" destination="Y6W-OH-hqX" eventType="editingDidEnd" id="Y4M-3d-QJv"/>
+                                                    <action selector="BottomTextFieldEditingChanged:" destination="Y6W-OH-hqX" eventType="editingChanged" id="SCL-ao-UND"/>
                                                 </connections>
                                             </textField>
-                                            <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LSY-6L-jcT" customClass="AutoAddPaddingButtton" customModule="PayPay" customModuleProvider="target">
+                                            <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ow-1B-sFE" customClass="AutoAddPaddingButtton" customModule="PayPay" customModuleProvider="target">
                                                 <rect key="frame" x="40" y="244.33333333333331" width="31.666666666666671" height="40"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="40" id="jga-Qj-uCg"/>
+                                                    <constraint firstAttribute="height" constant="40" id="0ne-hT-CWb"/>
                                                 </constraints>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="..." image="arrowtriangle.down.fill" catalog="system">
-                                                    <color key="titleColor" red="0.0" green="0.45882352939999999" blue="0.89019607840000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="titleColor" name="AccentColor"/>
                                                 </state>
                                             </button>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="Bad-WR-S4l" secondAttribute="trailing" constant="40" id="G1M-FE-VIq"/>
-                                            <constraint firstAttribute="bottom" secondItem="Bad-WR-S4l" secondAttribute="bottom" constant="140" id="H9A-F9-ldq"/>
-                                            <constraint firstItem="LSY-6L-jcT" firstAttribute="leading" secondItem="Bad-WR-S4l" secondAttribute="leading" id="Ngl-lp-qXp"/>
-                                            <constraint firstItem="Bad-WR-S4l" firstAttribute="leading" secondItem="6Ch-My-j5R" secondAttribute="leading" constant="40" id="Nq3-Td-YPB"/>
-                                            <constraint firstItem="LSY-6L-jcT" firstAttribute="top" secondItem="Bad-WR-S4l" secondAttribute="bottom" constant="10" id="OXy-EK-ooA"/>
-                                            <constraint firstItem="LSY-6L-jcT" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="Bad-WR-S4l" secondAttribute="trailing" id="XTi-2r-B5r"/>
+                                            <constraint firstItem="193-79-SFu" firstAttribute="leading" secondItem="6Ch-My-j5R" secondAttribute="leading" constant="40" id="49v-E5-vgF"/>
+                                            <constraint firstAttribute="trailing" secondItem="193-79-SFu" secondAttribute="trailing" constant="40" id="E4C-O0-xhx"/>
+                                            <constraint firstAttribute="bottom" secondItem="193-79-SFu" secondAttribute="bottom" constant="140" id="VCb-gw-aYC"/>
+                                            <constraint firstItem="1Ow-1B-sFE" firstAttribute="leading" secondItem="193-79-SFu" secondAttribute="leading" id="bpN-6A-3gn"/>
+                                            <constraint firstItem="1Ow-1B-sFE" firstAttribute="top" secondItem="193-79-SFu" secondAttribute="bottom" constant="10" id="iY9-yH-va3"/>
+                                            <constraint firstItem="1Ow-1B-sFE" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="193-79-SFu" secondAttribute="trailing" id="lMp-vs-gfg"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -125,8 +126,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="vhY-P0-CyM"/>
                     <connections>
-                        <outlet property="bottomMenuButton" destination="LSY-6L-jcT" id="2Ng-u5-gYL"/>
-                        <outlet property="bottomTextField" destination="Bad-WR-S4l" id="bdf-kc-R3Z"/>
+                        <outlet property="bottomMenuButton" destination="1Ow-1B-sFE" id="Mgo-o3-vSe"/>
+                        <outlet property="bottomTextField" destination="193-79-SFu" id="UXB-bX-sfD"/>
                         <outlet property="bottomView" destination="6Ch-My-j5R" id="4rA-tf-Nm6"/>
                         <outlet property="swapButton" destination="wnO-zt-QYh" id="zby-Pw-Txi"/>
                         <outlet property="topMenuButton" destination="bdw-Lf-Spd" id="IEy-ZF-cl3"/>
@@ -160,6 +161,9 @@
     <resources>
         <image name="arrow.up.arrow.down" catalog="system" width="128" height="97"/>
         <image name="arrowtriangle.down.fill" catalog="system" width="128" height="120"/>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
